Fix spacing of header + alerts + jumbotron, Fix logo alignment

--- a/clients/website/src/css/site.scss
+++ b/clients/website/src/css/site.scss
@@ -2,6 +2,7 @@
 @import "./mixins";
 @import "./reset";
 @import "./variables";
+@import "./components";
 
 :root {
   // Colors
@@ -41,11 +42,6 @@ body {
 
 a {
   color: var(--link);
-  text-decoration: none;
-
-  &:hover:not(.btn) {
-    text-decoration: underline;
-  }
 }
 
 a, button, button:focus, input {
@@ -79,7 +75,7 @@ header.nav {
   display: flex;
   align-items: center;
   position: sticky;
-  top: -1px;
+  top: 0;
   padding-block-start: 8px;
   padding-inline: 8px;
   box-shadow: var(--box-shadow-lowest);
@@ -92,6 +88,11 @@ header.nav {
   }
 
   .logo {
+    display: flex;
+    align-items: center;
+    align-self: end;
+    border-bottom: none;
+
     &, &:hover, &:active {
       color: inherit;
       text-decoration: none;
@@ -118,7 +119,7 @@ header.nav {
       text-decoration: none;
     }
   }
-  a:not(:has(.icon:first-child:last-child)) {
+  a:not(.logo):not(:has(.icon:first-child:last-child)) {
     font-weight: 500;
     border-bottom: solid 2px transparent;
     outline: none;
@@ -159,110 +160,12 @@ header.nav {
   }
 }
 
-.alert {
-  position: sticky;
-  top: $headerHeight + 8px;
-  display: flex;
-  align-items: baseline;
-  margin-inline: 8px;
-  margin-block: 8px 0;
-  padding: 8px;
-  height: min-content;
-  border-color: currentcolor;
-  transform: translateY(0);
-  transform-origin: top center;
-  opacity: 1;
-  transition: margin-block 350ms ease-out, padding-block 350ms ease-out, height 350ms ease-out, transform 250ms ease-out, opacity 200ms ease-out;
-  transition-delay: 0ms, 0ms, 50ms, 0ms, 0ms;
-  overflow: hidden;
-  @include on-top();
-
-  &.dismissed {
-    margin-block: 0;
-    padding-block: 0;
-    height: 0;
-    transform: translateY(-100%);
-    opacity: 0;
-    transition-timing-function: ease-out, ease-in, ease-out;
-    transition-delay: 0ms, 0ms, 0ms, 0ms, 0ms;
-    overflow-y: hidden;
-  }
-
-  &.alert-warning {
-    background-color: lightgoldenrodyellow;
-  }
-  &.alert-info {
-    color: #043944;
-    background-color: var(--skyblue);
-
-    a {
-      color: var(--skyblue-contrast);
-    }
-    a:hover, a:focus {
-      text-decoration: underline;
-    }
-  }
-  &.alert-danger {
-    color: #290a0d;
-    background-color: indianred;
-  }
-
-  &:has(p .context.icon) {
-    align-items: center;
-  }
-
-  h1.title {
-    font-size: 0.95em;
-    font-weight: bold;
-    margin-block: 0;
-    margin-inline: 8px;
-  }
-  p {
-    flex: 1;
-    display: inline-flex;
-    margin: 0;
-    font-size: 0.875em;
-  }
-  p .icon {
-    position: relative;
-    top: -1px;
-    margin-inline-start: 2px;
-  }
-  .icon + p {
-    margin-inline-start: 8px;
-  }
-  p:has(.context.icon) {
-    position: relative;
-    top: 2.5px;
-  }
-  .btn.btn-sm {
-    padding-block: 0;
-    padding-inline: 0.25em;
-    align-self: center;
-  }
-  p + .btn {
-    margin-inline-start: 8px;
-
-    &.btn-close {
-      margin-inline-start: 4px;
-      cursor: pointer;
-    }
-  }
-}
-.alert.notification {
-  display: inline-flex;
-
-  button.btn-close {
-    margin-inline-start: 8px;
-  }
-}
-
 main {
   flex: 1;
 }
 
 main #disclaimer {
-  margin-block-end: 8px;
+  margin-block: 0 14px;
   margin-inline: 0;
   padding-inline: 10px;
 
@@ -271,24 +174,9 @@ main #disclaimer {
   }
 }
 
-.jumbotron {
-  display: flex;
-  flex-direction: column;
-  margin-inline: 8px;
-  padding: 1rem 0.75rem;
-  color: #f8f1f9;
-  background-color: #4E5166;
-  border-radius: 0.3rem;
-  transition: margin-block-start 0.3s ease-out;
-
-  &:focus-within {
-    outline: 2px var(--link) solid;
-    outline-offset: 2px;
-  }
-}
-/* Factor difference of the alert, if any, including it's border. */
-main > .alert + .jumbotron {
-  margin-block-start: calc(3em - #{$headerHeight - 2px} + 16px);
+// Ensure the jumbotron is properly spaced when the alert is not present.
+main > noscript + script + .jumbotron {
+  margin-block-start: 16px;
 }
 .jumbotron .btn.call-to-action {
   align-self: end;
@@ -308,50 +196,13 @@ footer {
   p {
     font-size: small;
     margin: 0;
-  }
-}
 
-.sr-only {
-	position: absolute !important;
-	margin: 0;
-	padding: 0;
-	width: 1px;
-	height: 1px;
-	border: 0;
-	overflow: hidden;
-	// IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box
-	clip: rect(1px 1px 1px 1px);
-	// Maybe deprecated, but we try to support legacy browsers
-	clip: rect(1px, 1px, 1px, 1px);
-	// Modern browsers, clip-path works inwards from each corner
-	clip-path: inset(50%);
-	// Added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space
-	white-space: nowrap;
-
-  &.shown-on-focus:focus {
-    font-size: 1.5rem;
-    font-weight: 500;
-    text-decoration: underline;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative !important;
-    left: unset;
-    right: unset;
-    padding: unset;
-    padding-inline: 4px;
-    width: unset;
-    height: fit-content;
-    border: unset;
-    border-radius: 4px;
-    overflow: visible;
-    clip: initial;
-    clip-path: initial;
-    // TODO: Extract this into a mixin, i.e. `@include on-top-for-sr();`
-    z-index: $onTop * 200;
-  }
-  &.shown-on-focus:focus-visible {
-    outline-color: var(--link);
+    :dir(ltr) &:last-child {
+      text-align: right;
+    }
+    :dir(rtl) &:last-child {
+      text-align: left;
+    }
   }
 }
 
